# asteroid_app

./: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml
.github/workflows/: semgrep.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/asteroidapp/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
response_example/: weatherforecast.json
src/: App.css  App.tsx  Layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  settings.rs  sun_moon_times.rs
src/components/: BackMenu.tsx  LinkButton.tsx
src/pages/: Configuration.tsx  Home.tsx  Language.tsx  Observatory.tsx  Scheduling.tsx  SunMoonTimes.tsx  WeatherForecast.tsx
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
