[package]
name = "asteroid_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
config = "0.14.0"
dirs = "5.0.1"
reqwest = {version = "0.12.7", features = ["blocking", "json"] }
scraper = "0.20.0"
serde_derive = "1.0.209"
serde_repr = "0.1.19"
chrono = "0.4.38"
toml = "0.8.14"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
