[package]
name = "asteroid_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
config = "0.15.11"
dirs = "6.0.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
scraper = "0.23.1"
serde_derive = "1.0.219"
serde_repr = "0.1.20"
chrono = "0.4.40"
toml = "0.8.20"
tauri-plugin-shell = "2.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
